--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "Metrium2",
-    "description": "Metrium2",
+    "name": "zelraiby",
+    "description": "zelraiby",
     "author": "Promicom inc",
     "repository": {
         "type": "git",
@@ -18,8 +18,8 @@
         "@rollup/plugin-node-resolve": "16.0.1",
         "@rollup/stream": "3.0.1",
         "autoprefixer": "10.4.21",
-        "bem-tools-core": "0.0.3",
-        "bem-tools-create": "2.3.0",
+        "bem-tools-core": "^0.0.3",
+        "bem-tools-create": "^2.3.0",
         "browser-sync": "3.0.4",
         "del": "8.0.0",
         "gulp": "5.0.1",
